--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,27 @@
   <meta name="msapplication-config" content="{{ '/assets/img/icons/browserconfig.xml?v=qA3OXqyw77' | relative_url }}">
   <meta name="theme-color" content="#ffffff">
 
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="{{ site.twitter_username }}">
+  {% if page.title %}
+    <meta name="twitter:title" content="{{ page.title }}">
+  {% else %}
+    <meta name="twitter:title" content="{{ site.title }}">
+  {% endif %}
+  {% if page.url %}
+    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+  {% endif %}
+  {% if page.summary %}
+    <meta name="twitter:description" content="{{ page.summary }}">
+  {% else %}
+    <meta name="twitter:description" content="{{ site.description }}">
+  {% endif %}
+  {% if page.featured-img %}
+    <meta name="twitter:image:src" content="{{ site.url }}{{ site.baseurl }}assets/img/posts/{{ page.featured-img }}.jpg">
+  {% else %}
+    <meta name="twitter:image:src" content="{{ site.url }}{{ site.baseurl }}assets/img/posts/sleek_lg.jpg">
+  {% endif %}
+
   {% if site.google_tag_manager %}
 
     {% include gtm.html %}
