twitter card: summary_large_image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
   <meta name="msapplication-config" content="{{ '/assets/img/icons/browserconfig.xml?v=qA3OXqyw77' | relative_url }}">
   <meta name="theme-color" content="#ffffff">
 
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="{{ site.twitter_username }}">
   {% if page.title %}
     <meta name="twitter:title" content="{{ page.title }}">
