fix broken layout (by last commit)

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,7 +54,7 @@ layout: compress
       </p>
       {% if page.author %}
       <p class="hero__meta">
-        <span>By {% page.author %}</span>
+        <span>By {{ page.author }}</span>
       </p>
       {% endif %}
     </div>
