Fix image for LinkedIn Posts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,9 @@
   <meta name="msapplication-config" content="{{ '/assets/img/icons/browserconfig.xml?v=qA3OXqyw77' | relative_url }}">
   <meta name="theme-color" content="#ffffff">
 
+  <meta name="image" property="og:image" content="{{ site.url }}{{ site.baseurl }}assets/img/posts/{{ page.featured-img }}.jpg">
+
+
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="{{ site.twitter_username }}">
   {% if page.title %}
