--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: compress
 {% include header.html %}
 
   {% if page.featured-img %}
-  <div class="hero lazyload" data-bg="{{ site.url }}{{ site.baseurl }}/assets/img/posts/{{ page.featured-img }}.jpg">
+  <div class="hero lazyload" data-bg="{{ site.baseurl }}assets/img/posts/{{ page.featured-img }}.jpg">
   {% else %}
   <div class="hero dark-bg">
   {% endif %}
@@ -33,7 +33,7 @@ layout: compress
             {% assign categories = page.categories %}
           {% endif %}
           {% for category in categories %}
-            <a class="label" href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
+            <a class="label" href="{{site.baseurl}}categories/#{{category|slugize}}">{{category}}</a>
             {% unless forloop.last %}&nbsp;{% endunless %}
           {% endfor %}
         </div>
