update twitter card tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,9 +36,9 @@
     <meta name="twitter:description" content="{{ site.description }}">
   {% endif %}
   {% if page.featured-img %}
-    <meta name="twitter:image:src" content="{{ site.url }}{{ site.baseurl }}/assets/img/posts/{{ page.featured-img }}.jpg">
+    <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/assets/img/posts/{{ page.featured-img }}.jpg">
   {% else %}
-    <meta name="twitter:image:src" content="{{ site.url }}{{ site.baseurl }}/assets/img/posts/sleek_lg.jpg">
+    <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/assets/img/posts/sleek_lg.jpg">
   {% endif %}
 
   {% if site.google_tag_manager %}
