--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,33 +12,33 @@
   <link rel="mask-icon" href="{{ '/assets/img/icons/safari-pinned-tab.svg?v=qA3OXqyw77' | relative_url }}" color="#5bbad5">
   <!--[if IE]><link rel="shortcut icon" href="/assets/img/icons/favicon.ico?v=qA3OXqyw77"><![endif]-->
   <link rel="shortcut icon" href="{{ '/assets/img/icons/favicon.ico?v=qA3OXqyw77' | relative_url }}">
-  <meta name="apple-mobile-web-app-title" content="Sleek">
-  <meta name="application-name" content="Sleek">
-  <meta name="msapplication-config" content="{{ '/assets/img/icons/browserconfig.xml?v=qA3OXqyw77' | relative_url }}">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="apple-mobile-web-app-title" content="Sleek" />
+  <meta name="application-name" content="Sleek" />
+  <meta name="msapplication-config" content="{{ '/assets/img/icons/browserconfig.xml?v=qA3OXqyw77' | relative_url }}" />
+  <meta name="theme-color" content="#ffffff" />
 
-  <meta name="image" property="og:image" content="{{ site.url }}{{ site.baseurl }}/assets/img/posts/{{ page.featured-img }}.jpg">
+  <meta name="image" property="og:image" content="{{ site.url }}{{ site.baseurl }}/assets/img/posts/{{ page.featured-img }}.jpg" />
 
 
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="{{ site.twitter_username }}">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="{{ site.twitter_username }}" />
   {% if page.title %}
-    <meta name="twitter:title" content="{{ page.title }}">
+    <meta name="twitter:title" content="{{ page.title }}" />
   {% else %}
-    <meta name="twitter:title" content="{{ site.title }}">
+    <meta name="twitter:title" content="{{ site.title }}" />
   {% endif %}
   {% if page.url %}
-    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}" />
   {% endif %}
   {% if page.summary %}
-    <meta name="twitter:description" content="{{ page.summary }}">
+    <meta name="twitter:description" content="{{ page.summary }}" />
   {% else %}
-    <meta name="twitter:description" content="{{ site.description }}">
+    <meta name="twitter:description" content="{{ site.description }}" />
   {% endif %}
   {% if page.featured-img %}
-    <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/assets/img/posts/{{ page.featured-img }}.jpg">
+    <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/assets/img/posts/{{ page.featured-img }}.jpg" />
   {% else %}
-    <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/assets/img/posts/sleek_lg.jpg">
+    <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/assets/img/posts/sleek_lg.jpg" />
   {% endif %}
 
   {% if site.google_tag_manager %}
