--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,8 +16,8 @@
               <span itemprop="name">{{ item.name }}</span>
             </a>
           {% endfor %}
-          <a target="_blank" rel="noreferrer" rel="noopener" class="header__link_out" href="https://blog.ledger.com/" itemprop="url">
-            <span itemprop="name">Our Tech Blog</span>
+          <a target="_blank" rel="noreferrer" rel="noopener" class="header__link_out" href="https://blog.ledger.com/tag/donjon/" itemprop="url">
+            <span itemprop="name">Blog</span>
             <svg style="margin-left: 8px" width="16" height="16" version="1.1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
               <path d="m20 20h-16v-15.94l4-0.05952v-4h-8v24h24v-10h-4zm-8-20 4 4-6 6 4 4 6-6 4 4v-12z" stroke-width=".03125"/>
             </svg>
