Vivid the colors of links

--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -3,13 +3,13 @@
   src: url("/assets/fonts/MuseoSans_300.otf");
 }
 
-$primary: #ef7f24 !default;
-$secondary: #ff6161 !default;
+$primary: #ff5300 !default;
+$secondary: #ff4000 !default;
 $border: #ededed !default;
-$primary-light: #f1a668;
+$primary-light: #ff641a;
 $reverse: #413e3c !default;
 $success: #8fd896 !default;
-$error: #ff6161 !default;
+$error: #ff4000 !default;
 
 $bg-color: #fff !default;
 $light-bg-color: #f9f9f9;
