--- a/assets/css/tools-suite.css
+++ b/assets/css/tools-suite.css
@@ -1,43 +1,61 @@
 /* CSS Specific for tools-suite page */
 .tool-cards-container {
-    /* background: #ff7533; */
-    flex-wrap: wrap;
     display: flex;
-    flex-direction: row;
     gap: 10px;
+    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: space-around;
+    align-content: center;
+    align-items: center;
+    margin: 10px;
 }
 
 .tool-card {
     display: flex;
     flex-direction: column;
-    background: rgb(249, 249, 249);
     align-items: center;
-    text-align: center;
-    border-radius: 10px;
-    padding: 5px;
-    border: 1px solid #c3c3c3;
     width: 30%;
     min-height: 200px;
 }
 
-.tool-card-separator {
-    content: "";
-    border: #c3c3c3;
+.tool-card>* {
+    width: 100%;
+    padding-left: 5px;
+    background: rgb(249, 249, 249);
+    padding-right: 5px;
+    border-left: 1px solid #c3c3c3;
+    border-right: 1px solid #c3c3c3;
+    margin: 0;
+    font-size: small;
+    flex: 1;
 }
 
 .tool-card>*:last-child {
-    width: 100%;
+    padding-bottom: 5px;
+    border: 1px solid #c3c3c3;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     flex: 0;
-    margin-bottom: 0;
-    /* border-top: 1px solid #c3c3c3; */
+    text-align: center;
 }
 
-.tool-card>*:not(:last-child) {
-    flex: 2;
+.tool-card>*:first-child {
+    padding-top: 5px;
+    border: 1px solid #c3c3c3;
+    background: #ffe0d1;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    flex: 0;
+    text-align: center;
+    font-size: initial;
 }
 
-.tool-card-repo-link {
-    margin-bottom: 2px;
-    flex-grow: 0;
+.tool-card img {
+    padding: 2px;
+}
+
+
+.tool-card ul {
+    padding: revert;
+    padding-inline-start: 20px;
 }
