--- a/assets/css/tools-suite.css
+++ b/assets/css/tools-suite.css
@@ -59,8 +59,8 @@
 }
 
 .tool-card img {
-    padding: 5px;
-    max-width: 80%;
+    padding: 10px;
+    max-height: 200px;
 }
 
 .tool-card p:has(img) {
