--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
 
   {% seo %}
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
   <link rel="apple-touch-icon" sizes="180x180"
     href="{{ '/assets/img/icons/apple-touch-icon.png?v=qA3OXqyw77' | relative_url }}">
   <link rel="icon" type="image/png" sizes="32x32"
