Update blog link to show the blog page and scroll directly to articles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
           </a>
           {% endfor %}
           <a target="_blank" rel="noreferrer" rel="noopener" class="header__link_out"
-            href="https://www.ledger.com/blog/category/donjon" itemprop="url">
+            href="https://www.ledger.com/blog/category/donjon#categories-of-blog" itemprop="url">
             <span itemprop="name">Blog</span>
             <svg style="margin-left: 8px" width="16" height="16" version="1.1" viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg" fill="currentColor">
