--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const latestBulletins = allLsb
       <div class="hero__content">
         <div class="hero__badge">Security Research</div>
         <h1 class="hero__title">
-          The <span class="text-gradient">Donjon</span> of Ledger
+          <span class="text-gradient">Donjon</span> @ Ledger
         </h1>
         <p class="hero__subtitle">
           We are the security research team at Ledger, dedicated to protecting your digital assets 
